fix Cumulative Layout Shift image (остался только от макета плитки, но на глаз незаметный)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,8 +43,6 @@
     transform: none !important;
     box-shadow: -2px 1px 20px -12px rgba(0, 0, 0, 0.24);
 }
-.project.card {
-}
 
 .my-btn {
     // line-height: 1;
@@ -86,9 +84,27 @@
     object-position: top center;
     object-fit: cover;
     width: 100%;
+    max-width: 100%;
 }
 .img-gradient {
     position: relative;
+    &:before {
+        display: block;
+        content: '';
+        width: 100%;
+        padding-top: (13 / 20) * 100%;
+        opacity: 0;
+    }
+    > img {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+    border-radius: 14px 14px 0 0;
+}
+.img-gradient {
     display: inline-block;
     width: 100%;
 }
@@ -100,7 +116,7 @@
     width: 100%;
     height: 100%;
     display: inline-block;
-
+    border-radius: 14px 14px 0 0;
     background: linear-gradient(45deg, #007bff29 0%, #ffffff00 100%);
     // background: radial-gradient(circle, rgba(255,255,255,0) 35%, rgb(24, 154, 255, 0.28) 100%);
 }
@@ -128,11 +144,12 @@
     height: 100%;
     transform: translateX(-50%) translateY(-50%);
     margin: 0;
+    border-radius: 14px 14px 0 0;
     // padding: 1em;
     background-color: #0000004f;
     opacity: 1;
     z-index: 1;
-    transition: all 1s;
+    transition: all ease-out 0.5s;
 }
 
 @media (pointer: fine) and (hover: hover) {
@@ -144,8 +161,6 @@
     }
 }
 
-img-gradient:hover {
-}
 .badge {
     font-weight: 400;
     border-color: #cdd6e0 !important;
@@ -153,6 +168,7 @@ img-gradient:hover {
     font-size: 0.85rem;
     font-family: 'Roboto Regular', sans-serif;
     line-height: 1em;
+    color: #0072ed;
 }
 #minesweeper-desc {
     font-size: 1em !important;
@@ -166,4 +182,5 @@ img-gradient:hover {
     background-color: #007bffb8;
     border-color: #007bff29;
 }
+
 @import 'portfolYOU';
